# ekg-edu

./: README.md  main.py  pyproject.toml
.kiro/specs/langgraph-feedback-loop/: design.md  requirements.md  tasks.md
agents/: __init__.py  analysis_agent.py  crawler_agent.py  keyword_agent.py  merge_agent.py  validation_agent.py
config/: __init__.py  constants.py  settings.py
data/: sample1.txt  sample2.txt  sample3.txt
docs/: EXAMPLES.md  ITERATION_COMPARISON.md  QUICK_START.md  README.md  TROUBLESHOOTING.md
docs/sample_results/: README.md  feedback_loop_example.json
models/: __init__.py  analysis_models.py  news_models.py  search_models.py
old/: README_nvidia_predictor.md  assignment_tracks_ko.ipynb  assignment_tracks_student.ipynb  insurance_analysis_complete.ipynb  news_agents.py  nvidia_keywords.ipynb  nvidia_multi_agent_20251022_170019.json  nvidia_multi_agent_20251022_170458.json  nvidia_multi_agent_20251022_171937.json  nvidia_multi_agent_20251022_173252.json  nvidia_multi_agent_20251022_174128.json  nvidia_multi_agent_20251024_115041.json  nvidia_multi_agent_predictor.py  nvidia_stock_predictor.py  prompt_test.py
utils/: __init__.py  file_handler.py  output_formatter.py
workflow/: __init__.py  graph.py  nodes.py  state.py
